@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2014 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2015 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -419,6 +419,8 @@ public class BODYSTRUCTURE implements Item {
 		String value = r.readString();
 		if (parseDebug)
 		    System.out.println("DEBUG IMAP: parameter value " + value);
+		if (value == null)	// work around buggy servers
+		    value = "";
 		list.set(name, value);
 	    } while (r.readByte() != ')');
 	    list.combineSegments();
